--- a/index.html
+++ b/index.html
@@ -37,7 +37,9 @@
           <h3>
 <a name="my-awesome-github-page" class="anchor" href="#my-awesome-github-page"><span class="octicon octicon-link"></span></a>My Awesome Github page</h3>
 
-<p>I DONT EVEN KNOW HOW TO CODE IN HTML! :0</p>
+<p>I DONT EVEN KNOW HOW TO CODE IN HTML! :0
+  OR CSS OR JAVASCRIPT!
+</p>
         </article>
       </div>
     </div>
