--- a/index.html
+++ b/index.html
@@ -37,9 +37,8 @@
           <h3>
 <a name="my-awesome-github-page" class="anchor" href="#my-awesome-github-page"><span class="octicon octicon-link"></span></a>My Awesome Github page</h3>
 
-<p>I DONT EVEN KNOW HOW TO CODE IN HTML! :0
-  OR CSS OR JAVASCRIPT!
-</p>
+<p>It's kind of depressing that I dont know how to code in HTML,CSS or Javascript...</p>
+<p>YOLO<p>
         </article>
       </div>
     </div>
