--- a/index.html
+++ b/index.html
@@ -39,6 +39,7 @@
 
 <p>It's kind of depressing that I dont know how to code in HTML,CSS or Javascript...</p>
 <p>YOLO<p>
+<img src="http://ts1.mm.bing.net/th?&id=HN.608008928052707569&w=300&h=300&c=0&pid=1.9&rs=0&p=0">
         </article>
       </div>
     </div>
