--- a/index.html
+++ b/index.html
@@ -25,7 +25,8 @@
       <h1 class="title">Lefty17.github.io</h1>
     </header>
     <div id="container">
-      <p class="tagline">Lefty&#39;s Github Page</p>
+      <p class="tagline">Lefty&#39;s Github Page           <script type="text/javascript" src="http://counter5.statcounterfree.com/private/counter.js?c=6679671f26484a91b2057eaa432374e7"></script>
+</p>
       <div id="main" role="main">
         <div class="download-bar">
         <div class="inner">
