--- a/index.html
+++ b/index.html
@@ -41,6 +41,7 @@
 <a name="my-awesome-github-page" class="anchor" href="#my-awesome-github-page"><span class="octicon octicon-link"></span></a>My Awesome Github page</h3>
 
 <p>It's kind of depressing that I dont know how to code in HTML,CSS or Javascript...</p>
+<p>but EBOLO!(Everybody Only Lives Once). So I'm getting someone else to do it!</p>
         </article>
       </div>
     </div>
